# TUI-Pomodoro-Timer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  timer.py
tuipomodoro/: PomodoroTimerApp.tcss  __main__.py  app.py  config.py  config.toml  timer.py  utils.py
