[project]
name = "tuipomodoro"
version = "0.1.0"
description = "TUI Pomodoro timer with background music support"
authors = [
    {name = "Nikita Timoshenko",email = "minecrosoft231231@gmai.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.2.8,<9.0.0)",
    "python-vlc (>=3.0.21203,<4.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
